# aws-ofi-nccl

./: configure.ac
include/: nccl_ofi.h  nccl_ofi_mem.h  nccl_ofi_param.h  stack.h
src/: Makefile.am  mem.c  nccl_ofi_net.c
